--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,2 @@
-# API Configuration
-VITE_DEV_API_URL=
-VITE_API_URL=
-
-# Google OAuth Configuration
-VITE_GOOGLE_CLIENT_ID=name.apps.googleusercontent.com
+# API Base URL
+VITE_API_URL=https://humic.xtrahera.com
