--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "konva": "^10.0.2",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-date-range": "^2.0.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-konva": "^19.0.10",
     "react-router-dom": "^7.9.4",
